<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="UselessParent">
        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:id="@+id/profile_image"
            android:src="@drawable/baseline_account_circle_24"
            android:contentDescription="TODO" />
        <TextView
            android:id="@+id/first_last_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/first_last_name"
            android:textColor="@color/white"
            android:layout_margin="10dp"
            android:textSize="25sp"
            android:layout_gravity="center"/>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10sp"
            android:stretchColumns="2">
            <TableRow>
                <TextView
                    android:text="@string/contact_number"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="@color/teal_700"/>
                <TextView
                    android:id="@+id/phone"
                    tools:text="1234567890"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:padding="5sp"
                    android:layout_marginStart="10sp"
                    android:textColor="@color/white"/>
            </TableRow>
            <TableRow>
                <TextView
                    android:text="@string/email"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="@color/teal_700"/>
                <TextView
                    android:id="@+id/email"
                    tools:text="user@gmail.com"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:padding="5sp"
                    android:layout_marginStart="10sp"
                    android:textColor="@color/white"/>
            </TableRow>
            <TableRow>
                <TextView
                    android:text="@string/added_time"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="@color/teal_700"/>
                <TextView
                    android:id="@+id/addedTime"
                    tools:text="0177000800"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:padding="5sp"
                    android:layout_marginStart="10sp"
                    android:textColor="@color/white"/>
            </TableRow>
            <TableRow>
                <TextView
                    android:text="@string/updated_time"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="@color/teal_700"/>
                <TextView
                    android:id="@+id/updatedTime"
                    tools:text="0177000800"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:padding="5sp"
                    android:layout_marginStart="10sp"
                    android:textColor="@color/white"/>
            </TableRow>
        </TableLayout>
    </LinearLayout>
</RelativeLayout>